2015-07-11  Eli Zaretskii  <eliz@gnu.org>

	* info/pcterm.c (highvideo, normvideo) [_WIN32]: New functions.
	(pc_begin_underline, pc_end_underline, pc_begin_standout)
	(pc_end_standout): New functions.
	(pc_initialize_terminal): Set up hooks for standout and underlined
	text.
	(top level) <xref_attr>: Declare.
	(pc_initialize_terminal): Initialize xref_attr.

2015-07-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_update_window_1): Better handling of 
	cross-references split across across lines.

2015-07-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_update_window_1) <xref-rendition=1>:
	Highlight the reference that we expect will be followed if the 
	user presses return.
	* info/session.c (read_and_dispatch) <xref-rendition=On>: Call
	display_update_one_window after each user command.

	* info/session.c (info_menu_or_ref_item): Fix condition for 
	multiple cross-references in one line.

2015-07-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/variables.c (info_variables): New user variable 
	'xref-rendition'.
	* info/display.c (xref_rendition_p): New variable.
	* info/terminal.c (terminal_begin_underline, terminal_end_underline):
	New functions.

	* info/info-utils.c (scan_reference_label): Don't place terminal 
	escape characters in text of node.  Alter expression used for 
	end of a label.

	* info/display.c (decide_if_in_reference): New function, based
	on decide_if_in_match.
	(display_update_window_1): Keep track of whether we are in a 
	cross-reference or menu item and turn on and off underlining 
	accordingly, if xref-rendition=On.

	* info/info-utils.c (printed_rep),
	* info/infodoc.c (pretty_keyseq),
	* info/nodemenu.c (format_node_info): Use { 0 } for null struct 
	initializer instead of {}.

	* info/info-utils.c (underlining_on, underlining_off): Removed.

2015-07-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Line.pm,